--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,33 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: localhost
+  database: letter_heals_v1_dev
+  username: rails_coinswift
+  password: <%= Rails.application.secrets.db_password %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  host: localhost
+  database: letter_heals_v1_dev
+  username: rails_coinswift
+  password: <%= Rails.application.secrets.db_password %>
+  database: letter_heals_v1_test
 
 production:
   <<: *default
+  host: tiny.db.elephantsql.com
+  database: bwioqeiw
+  username: bwioqeiw
+  password: <%= Rails.application.secrets.db_password %>
   database: db/production.sqlite3
