--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
-# Ignore master key for decrypting credentials and more.
+# # Ignore master key for decrypting credentials and more.
 /config/master.key
